fix footer alignment on mobile

--- a/src/style/page.sass
+++ b/src/style/page.sass
@@ -59,7 +59,6 @@ main
 article
 	width: 90%;
 	margin: auto;
-	margin-bottom: 80px;
 
 	&::before
 		content: '';
@@ -85,7 +84,8 @@ footer
 	padding: 40px;
 	left: 0;
 	right: 0;
-	position: fixed;
+	position: relative;
+	margin-top: 20px;
 	bottom: 0;
 	a
 		color: #224;
@@ -126,6 +126,7 @@ footer
 			position: absolute;
 
 	footer
+		position: fixed;
 		width: 300px;
 		right: 0;
 		text-align: left;
